--- a/Week9/Components/Pages/Products.razor
+++ b/Week9/Components/Pages/Products.razor
@@ -1,9 +1,10 @@
 @page "/products"
 @using Week9.Data
+@using Week9.Components
 
 <h3>All Products</h3>
 
-<a class="btn btn-primary" href="/products/add">Add Product</a>
+<a class="btn btn-primary mb-3" href="/products/add">Add Product</a>
 
 @if (ProductStore.Products.Count == 0)
 {
@@ -11,28 +12,9 @@
 }
 else
 {
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Image</th>
-        </tr>
-        </thead>
-
-        <tbody>
-        @foreach (var product in ProductStore.Products)
-        {
-            <tr>
-                <td>@product.Id</td>
-                <td>@product.Name</td>
-                <td>@product.Price</td>
-                <td>
-                    <img src="@product.Image" width="60" />
-                </td>
-            </tr>
-        }
-        </tbody>
-    </table>
+    <!-- Show all products using ProductCard -->
+    @foreach (var p in ProductStore.Products)
+    {
+        <ProductCard Item="p" />
+    }
 }
